Fix spacing issues

--- a/css/common.css
+++ b/css/common.css
@@ -50,8 +50,16 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-article.post h2 {
-  font-size: 2rem;
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.25rem;
+}
+
+h3 {
+  font-size: 1.25rem;
 }
 
 a {
@@ -147,20 +155,27 @@ div.highlight {
 
   .wrapper {
     padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
   }
 }
 
 .post-title {
-  font-size: 3rem;
+  font-size: 2.5rem;
   margin-top: 0rem;
 
-  @media (min-width: 1024px) {
-    font-size: 5rem;
+  .post-date {
+    font-size: 1rem;
+    color: #283618;
+    text-decoration: underline;
+    display: block;
+    padding-top: 0.5rem;
   }
 }
 
-.social_icon {
-  padding: 1rem;
+.social-icon {
+  padding: 0.25rem 0;
 }
 
 time {
